# openmct

./: .svnignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  prepare.sh
configs/: buildroot.config  busybox.config  kernel-2.4.34.config  kernel-2.4.35.3.config1  kernel-nas110.config  kernel-nas200.config  kernel.config  uclibc.config
doc/: Makefile-depencies.readme
fs/etc/: vsftpd.conf
fs/etc/network/: interfaces
fs/etc/rc.d/: rcS
fs/etc/samba/: smb.conf
makefiles/: basics.mk  cdk.mk
mct/: Makefile  Rules  TODO
mct/etc/: fstab  hostname  issue  passwd  vsftpd.conf
mct/etc/init.d/: functions  hostname  networking  sshd  swap  telnetd
mct/etc/network/: interfaces
mct/etc/rc.d/: rcSlocal
mct/etc/sysconfig/: hdparm  sshd  swap
mct/kernel/: Makefile
mct/kernel/configs/: linux-2.4.31-mct.config
mct/kernel/patches/: 001-mct.patch  002-squashfs.patch  003-mppe-mppc.patch  004-cryptoloop.patch  005-vserver.patch  006-grsecurity.patch  egcs-1.1.2-mct.diff  glibc-2.2.5-mct.diff  linux-2.4.31-mct.diff  linux-2.4.31-squashfs2.2-lzma-mct.diff  lzma-4.27-mct.diff
mct/kernel/scripts/: patch-kernel.sh
mct/root/: Makefile  busybox.mct.links
mct/root/configs/: buildroot-mct.config  busybox-mct.config
mct/root/etc/: fstab  inittab
mct/root/etc/rc.d/: rcS
mct/root/patches/: buildroot-mct.diff
mct/root/src/: mct_flash.c
mct/src/: mct_modify.c
openmct/: .svnignore  INSTALL  Makefile  README  Rules  check.sh
openmct/configs/: boss  custom  nas110  nas200  sa  sa110  sa113  sa200
openmct/etc/: .svnignore  exports  fstab  group  httpd.conf  rc.conf
openmct/etc/dnrd/: master
openmct/etc/grsec/: learn_config
openmct/etc/init.d/: dns  ftpd  functions  hdparm  httpd  leds  networking  nfs  ntpdate  portmap  pptpd  smartd  sshd  swap  syslogd  telnetd  vservers
openmct/etc/rc.d/: rcS  rcSlocal
openmct/etc/rc.d/rcSlocal.d/: S15dns  S50ftpd  S99vservers
openmct/etc/samba/: smb.conf
openmct/etc/sysconfig/: dns  hdparm  httpd  leds  ntpdate  pptpd  sshd  swap  telnetd  vservers
openmct/etc/vservers/: newvserver-vars
openmct/scripts/: cleanup-root.sh  ip-shift.sh  make-symlinks.sh  remove-svn.sh  remove-symlinks.sh  substitute.sh  uname.sh
patches/: buildroot.patch  buildroot.patch001  kernel_mct.patch  kernel_vserver.patch  mp3info.patch  nano.patch  nfsutils.patch
patches/binutils-2.16.1/: 042-ld-Wlcomma.patch
patches/gcc-3.4.4/: 900-use-cp.patch  910-mbsd-multi.patch  920-integer-overflow.patch
patches/gnuconfig/: .svnignore
patches/kernel/: 001-mct.patch  005-vserver.patch  007-vserver-mips-syscall.patch  011-lzma.patch  012-squashfs-lzma.patch  013-scsi-idle.patch  014-scripts-Configure-bash4.patch  include.patch  readme
patches/uClibc-0.9.28/: 150-portability.patch
progs/: .svnignore  Makefile.am  proccgi.c
toolchain/: Makefile  build.sh
toolchain/patches/: egcs-1.1.2.diff  uClibc-0.9.14-mipsel-linux.diff
tools/: .svnignore  Makefile.am
tools/mct_modify/: .svnignore  Makefile.am
tools/mkfs.jffs2/: .svnignore  Makefile.am
